# ds_connection

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.json  PROGRESS.md  README.md  dashboard-prototype.html  电商连接器产品方案.md
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/scripts/: add_adapter_key.sql  add_adapter_release.sql  add_captcha.sql  add_more_platforms.sql  add_soft_delete.sql  alter_storage_type.sql  init.sql  init_db.py  remove_recommendation.sql  run_baidu_demo.py  seed_demo_data.py
backend/src/: main.py  worker.py
backend/src/application/services/: dashboard_service.py  data_sink.py  runtime_init.py  task_executor.py  task_scheduler.py
backend/src/application/services/file_preprocess/: __init__.py  append_columns_processor.py  file_archive_mover.py  pipeline.py
backend/src/application/services/storage_uploader/: __init__.py  base.py  dingtalk_sheet_uploader.py  factory.py  feishu_bitable_uploader.py  mysql_uploader.py
backend/src/config/: database.py  settings.py
backend/src/dc_backend/: main.py
backend/src/dc_backend/application/services/: dashboard_service.py  task_executor.py
backend/src/dc_backend/config/: database.py  settings.py
backend/src/dc_backend/presentation/schemas/: dashboard.py
backend/src/infrastructure/connectors/base/: adapter.py  execution_context.py  isolated_browser.py  registry.py  web_data_adapter.py
backend/tests/: test_app_lifespan.py  test_demo_baidu_instruction_pipeline.py  test_isolated_browser.py  test_smoke.py  test_task_scheduler.py  test_web_data_adapter_browser_context.py
(+106 files in other folders)
